# LingshuTerm2.0

./: PROJECT_ARCHITECTURE_AND_SPECS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: block.rs  commands.rs  connection.rs  connection_commands.rs  executor.rs  lib.rs  logger.rs  main.rs  output_sanitizer.rs  persistence.rs  session_commands.rs  shell.rs  stream_cleaner.rs
src/components/: BlocksPanel.tsx  BottomInputArea.tsx  CommandBlock.tsx  CommandInput.tsx  ContextMenu.tsx  EditorPanel.tsx  Layout.tsx  SessionTypeModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TaskBoard.tsx  TerminalPanel.tsx  TitleBar.tsx
src/components/output/: AnsiText.tsx  CodeBlock.tsx  DirectoryChart.tsx  DiskUsageCard.tsx  FileGrid.tsx  FileListTable.tsx  GitStatus.tsx  (+5 more)
src/hooks/: useAiSubmit.ts  useBlockSession.ts  useEditor.ts  usePersistenceBootstrap.ts  useSession.ts  useTaskQueue.ts  useTerminal.ts  useTerminalResize.ts
src/lib/: aiDetect.ts  aiService.ts  ansi.ts  connectionService.ts  fileParser.ts  monaco.ts  outputDetector.ts  outputDispatch.ts  persistenceService.ts  persistenceSubscribe.ts  sessionService.ts  sessionUtils.ts  xterm.ts
src/models/: block.ts  connection.ts  editor.ts  session.ts  sessionData.ts  task.ts  terminal.ts
src/stores/: commandStore.ts  connectionStore.ts  editorStore.ts  sessionStore.ts  settingsStore.ts  taskStore.ts  uiStore.ts
src/test/: setup.ts
(+7 files in other folders)
