[package]
name = "lingshu-term2"
version = "2.0.0"
description = "灵枢智能终端 2.0 - 跨平台智能 Agent 终端"
authors = ["Lingshu Team"]
edition = "2021"

[lib]
name = "lingshu_term2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
# 使用 ring 作为加密后端，避免 Windows 下编译 aws-lc-sys 需要 NASM 的问题
russh = { version = "0.60", default-features = false, features = ["ring", "flate2"] }
async-trait = "0.1"
serialport = "4.3"
regex = "1"
